scrollbar fixed

--- a/star-admin2-free-admin-template-main/star-admin2-free-admin-template-main/template/css/vertical-layout-light/style.css
+++ b/star-admin2-free-admin-template-main/star-admin2-free-admin-template-main/template/css/vertical-layout-light/style.css
@@ -10563,6 +10563,7 @@ progress {
 .table-responsive {
   overflow-x: auto;
   overflow-y: scroll;
+  height: 200px;
   -webkit-overflow-scrolling: touch;
 }
 
